--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
     "autoprefixer": "^9.0.0",
+    "bootstrap": "^5.1.3",
     "browser-sync": "^2.27.7",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
